--- a/user.yaml
+++ b/user.yaml
@@ -1,5 +1,5 @@
-- name: Install catalogue component
-  hosts: catalogue
+- name: Install user component
+  hosts: user
   become: yes
   tasks:
   - name: setup NPM source
@@ -36,14 +36,14 @@
       path: /app
       state: directory
 
-  - name: download catalogue artifact
+  - name: download user artifact
     ansible.builtin.get_url:
-      url: https://roboshop-builds.s3.amazonaws.com/catalogue.zip
+      url: https://roboshop-builds.s3.amazonaws.com/user.zip
       dest: /tmp
 
-  - name: extract catalogue artifact
+  - name: extract user artifact
     ansible.builtin.unarchive:
-      src: /tmp/catalogue.zip
+      src: /tmp/user.zip
       dest: /app
       remote_src: yes
 
@@ -52,10 +52,10 @@
     args:
       chdir: /app
 
-  - name: copy catalogue service
+  - name: copy user service
     ansible.builtin.copy:
-      src: catalogue.service
-      dest: /etc/systemd/system/catalogue.service
+      src: user.service
+      dest: /etc/systemd/system/user.service
 
   - name: deamon reload
     ansible.builtin.systemd:
@@ -71,13 +71,11 @@
       name: mongodb-org-shell
       state: installed
 
-  - name: load catalogue data
-    ansible.builtin.command: mongo --host mongodb.joindevops.live < /app/schema/catalogue.js
+  - name: load user data
+    ansible.builtin.command: mongo --host mongodb.joindevops.live < /app/schema/user.js
 
-  - name: restart catalogue
+  - name: restart user
     ansible.builtin.service:
-      name: catalogue
+      name: user
       state: restarted
       enabled: true
-
-  
